# thesis_project

./: .claude.json  .env.oss_testing  .gitignore  .mcp.json  =2.0.0  CLAUDE.md  COMPLIANCE_ENHANCEMENT_PLAN.md  CROSS_VALIDATION_FIXES_SUMMARY.md  Chrome Debug Mode.lnk.txt  HONEST_END_TO_END_TEST_REPORT.md  MCP_FIX_REPORT.md  NEXT_AGENT_COMPREHENSIVE_PLAN.md  README.md  SSH_Claude_Access_Instructions.md  TASK20_FIXES_COMPLETE_REPORT.md  TASK22_COMPREHENSIVE_VALIDATION_REPORT.md  TASK25_FINAL_COMPLIANCE_REPORT.md  TASK32_dual_mode_comparison_TASK32_DUAL_MODE_20250813_220832.json  TASK32_dual_mode_comparison_report_TASK32_DUAL_MODE_20250813_220731.md  TASK32_dual_mode_comparison_report_TASK32_DUAL_MODE_20250813_220832.md  TASK33_STATISTICAL_VALIDATION_COMPREHENSIVE_VERIFICATION_REPORT.md  TASK_16_CRITICAL_EVALUATION.md  TASK_17_FIXES_IMPLEMENTED.md  TASK_18_REAL_VALIDATION_REPORT.md  TASK_19_FINAL_HONEST_REPORT.md  TASK_19_HONEST_ASSESSMENT.md  TASK_21_VALIDATION_REPORT.md  TASK_23_FINAL_VALIDATION_SUMMARY.md  TECHNICAL_ARCHITECTURE_REPORT.md  THESIS_EVIDENCE_GAP_PLAN.md  THESIS_GAP_BRIDGING_PLAN.md  WORKFLOW_FIX_IMPLEMENTATION_REPORT.md  WORKFLOW_ISSUES_AND_INCONSISTENCIES_REPORT.md  audit_coverage_verification.py  check_dependencies.py  check_pdfplumber.py  check_workflow_validation.py  clear_chromadb.py  complex_phoenix_test.txt  core_tool_test.py  (+180 more)
.claude/: AUDIO_WRAPPER_USAGE.md  audio_hooks.py  claude-audio-wrapper.sh  claude-monitor.py  enhanced_play_sound.ps1  final_test_audio.txt  hook_wrapper.bat  hook_wrapper.ps1  hooks.py  permission_decision_example.py  play_sound.ps1  test-exitplanmode.sh  test-permission-output.sh  test-wrapper.md  test_new_hooks.py  user_prompt_submit_example.py
.claude/agents/: context-collector.md  cv-analyzer.md  cv-validation-tester.md  debugger.md  end-to-end-tester.md  monitor-agent.md  (+7 more)
.serena/: project.yml
.taskmaster/: state.json
PRPs/: llama-workflow-test-generation.md  test-generation-mvp.md
THESIS_EVIDENCE_PACKAGE/: DATA_COLLECTION_REQUIREMENTS.md  EVIDENCE_INDEX.md  MANIFEST.json  ORGANIZATION_PLAN.md  README.md  TEST_SUITE_ANALYSIS_REPORT.md  VERIFICATION_CHECKLIST.md  analyze_test_suites.py
augmentation/: content_mapping_matrix.json  coordination_manifest.md
datasets/: DATASET_README.md  manual_cv_analysis.py  prepare_cross_validation.py  validate_dataset.py  validation_results.json
docs/: gamp5_categorization_synthesis.md
docs_archive/: EXECUTION_SUMMARY_20250819.md  FINAL_OSS_STATUS.md  TASK24_SECURITY_VALIDATION_REPORT.md  TASK32_dual_mode_comparison_report_TASK32_DUAL_MODE_20250813_220603.md  TASK_23_IMPLEMENTATION_REPORT.md  TASK_27_VALIDATION_EXECUTION_FRAMEWORK_COMPREHENSIVE_TEST_REPORT.md  statistical_validation_report_20250814_074615.md  statistical_validation_results_20250814_074615.json
gamp5_test_data/: validation_data.md
main/: COMPREHENSIVE_FAILURE_ANALYSIS_REPORT.md  FINAL_SYSTEM_STATUS.md  HONEST_INVESTIGATION_REPORT.md  HONEST_WORKFLOW_REPORT.md  MIGRATION_VALIDATION_REPORT.md  OSS_MIGRATION_COMPLETE_REPORT.md  OSS_MIGRATION_CRITICAL_ISSUES_SUMMARY.md  REAL_SYSTEM_STATUS.md  UPDATED_WORKFLOW_REPORT.md  analyze_urs003_phrases.py  category3_test.md  check_chromadb.py  clear_database.py  core_llm_test_results.json  create_sample_oq_output.py  debug_callback_manager.py  debug_gamp_analysis.py  debug_gpt_oss_comparison.py  debug_imports.py  debug_phoenix_comprehensive.py  debug_phoenix_handler_creation.py  debug_phoenix_observability.py  export_phoenix_task42.py  focused_oss_test.py  focused_oss_test_report.json  generate_test_output.py  gpt_oss_120b_results_20250807_160427.json  ingest_chromadb.py  launch_phoenix.py  launch_phoenix_simple.py  main.py  manual_db_clear.py  migration_validation_report.json  minimal_api_debug.py  monitor_workflow.py  oss_migration_report.md  oss_test_results_detailed.json  phoenix_diagnostic_results.json  phoenix_final_status_test.py  phoenix_monitoring.py  (+148 more)
run/: ENABLE_CHROME_DEBUGGING.bat  check_pdfplumber.py  chrome-debug-fixed.ps1  clear_database.py  debug_callback_manager.py  debug_gpt_oss_comparison.py  debug_imports.py  debug_security_detailed.py  generate_thesis_visualizations_clean.py  generate_thesis_visualizations_simple.py  launch_phoenix.py  manual_dataset_generation.py  run_complexity_test.py  run_compliance_test.py  run_compliance_validation.py  run_cross_validation.py  run_extended_security_assessment.py  run_fix_test.bat  run_focused_compliance_validation.py  run_full_security_assessment.py  run_performance_analysis.py  run_statistical_analysis.py  run_task42_simple.py  run_test.bat  simple_audit_test.py  simple_oq_test.py  simple_phoenix.py  simple_statistical_analysis.py
(+1545 files in other folders)
